<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/lightGray"
    android:orientation="vertical">

    <Button
        android:id="@+id/btn_Reset"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/buttonBackground"
        android:text="@string/reset"
        android:textColor="@color/buttonText" />

    <ListView
        android:id="@+id/listView"
        android:layout_width="match_parent"
        android:layout_height="424dp" >

    </ListView>

    <Button
        android:id="@+id/btn_HighToMenu"
        android:layout_width="match_parent"
        android:layout_height="35dp"
        android:background="@color/buttonBackground"
        android:baselineAligned="false"
        android:text="@string/menu"
        android:textColor="@color/buttonText" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="match_parent"
        android:layout_height="54dp"
        android:text="@string/average"
        android:textColor="@color/colorPrimary" />

    <TextView
        android:id="@+id/txt_average"
        android:layout_width="match_parent"
        android:layout_height="53dp"
        android:text="Average"
        android:textColor="@color/colorPrimary"
        android:textSize="20sp" />

</LinearLayout>
